--- a/index.html
+++ b/index.html
@@ -2041,6 +2041,14 @@ const TIER_DIFFICULTY_MULT = {
   2: 1.25, // elites
   3: 1.5   // bosses / scary stuff
 };
+// === STAMINA BALANCING ===
+
+// Global multiplier on stamina cost for basic attacks
+const STAMINA_ATTACK_MULT = 1.35; // 35% more expensive
+
+// Minimum stamina cost per attack (even on cheap weapons)
+const MIN_ATTACK_STAMINA_COST = 7;
+  
 // === PLAYER DAMAGE BALANCING ===
 
 // Global multiplier on all player basic attacks
@@ -4249,8 +4257,9 @@ function onDeath(){
 }
 
 function pAttack(){
-  if(!STATE.combat.inCombat) return;
+  if (!STATE.combat.inCombat) return;
   tickShoutCooldown();
+
   const e = STATE.combat.enemy;
   const p = STATE.player;
   const weapon = p.equipment?.weapon || null;
@@ -4258,10 +4267,16 @@ function pAttack(){
     ? WEAPON_TYPES[weapon.weaponType]
     : WEAPON_TYPES.sword;
 
-  const staminaCost = wt.staminaCost != null ? wt.staminaCost : 6;
+  // --- STAMINA COST ---
+  const baseStaminaCost = wt.staminaCost != null ? wt.staminaCost : 6;
+
+  // Global attack stamina scaler + minimum cost
+  let finalStaminaCost = Math.max(
+    MIN_ATTACK_STAMINA_COST,
+    Math.ceil(baseStaminaCost * STAMINA_ATTACK_MULT)
+  );
 
   // Blizzard makes attacks more tiring
-  let finalStaminaCost = staminaCost;
   if (STATE.combat && STATE.combat.blizzardActive) {
     finalStaminaCost = Math.ceil(finalStaminaCost * 1.3); // +30% cost
   }
@@ -4310,14 +4325,15 @@ function pAttack(){
     dmg = Math.round(dmg * 1.2); // +20% damage
   }
 
-  // ✅ NEW: apply global + tier-based damage scaling
+  // Apply global + tier-based damage scaling
   const tier = e.tier || 1;
   const tierMod = PLAYER_VS_TIER_MOD[tier] || 1.0;
   dmg = Math.max(1, Math.round(dmg * PLAYER_DAMAGE_MOD * tierMod));
 
+  // Spend stamina & deal damage
   p.stamina = clamp(p.stamina - finalStaminaCost, 0, p.maxStamina);
-  e.health = clamp(e.health - dmg, 0, e.maxHealth);
-  
+  e.health  = clamp(e.health - dmg, 0, e.maxHealth);
+
   updateEnemyPreview();
 
   const wName = weapon ? weapon.name : "weapon";
@@ -4338,8 +4354,6 @@ function pAttack(){
   // Axes & battleaxes: bleed
   if (wt.bleedChance && e.health > 0 && Math.random() < wt.bleedChance) {
     const bleed = randInt(wt.bleedMin || 3, wt.bleedMax || 7);
-
-    // ✅ Bleed should also respect caps, but can be unscaled to feel strong
     e.health = clamp(e.health - bleed, 0, e.maxHealth);
     updateEnemyPreview();
     logMsg(
@@ -5955,6 +5969,7 @@ init();
 </script>
 </body>
 </html>
+
 
 
 
